<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".android.userprofile.AvatarActivity">

	<Button
		android:id="@+id/button2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="Select Image"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_constraintLeft_creator="1"
		tools:layout_constraintRight_creator="1"
		android:onClick="selectImage"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginTop="32dp" />
	<Button
		android:id="@+id/button3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="32dp"
		android:text="Set as Avatar"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button2"
		android:onClick="uploadImage"/>
	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:scaleType="centerCrop"
		android:layout_marginBottom="0dp"
		android:layout_marginLeft="0dp"
		android:layout_marginRight="0dp"
		android:layout_marginTop="32dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>