...
		android:paddingLeft="@dimen/margin_activity_horizontal"
		android:paddingRight="@dimen/margin_activity_horizontal"
		android:paddingStart="@dimen/margin_activity_horizontal"
		android:paddingTop="@dimen/margin_activity_vertical">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_entry_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/choose_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword"
				android:maxLines="1">
...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password_entry_wrapper"
			tools:visibility="visible"/>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_confirm_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:errorEnabled="true"
			app:hintEnabled="false"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/strength_meter">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password_confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirm_password"
				android:imeOptions="actionNext"
				android:inputType="textPassword"
				android:maxLines="1"/>
...
