...
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.design.widget.NavigationView
			android:id="@+id/navigation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@color/menu_background"
			app:headerLayout="@layout/navigation_header"
			app:itemIconTint="@color/briar_text_primary"
			app:itemTextColor="@color/briar_text_primary"
			app:menu="@menu/navigation_drawer">

			<ImageButton
				android:id="@+id/imageButton1"
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:layout_gravity="right"
				android:background="@drawable/round_button"
				android:scaleType="fitXY"
				app:srcCompat="@android:drawable/ic_menu_gallery" />
...
